# use-wasm

./: .gitignore  .markdownlint.json  .markdownlintignore  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  CRATE_TEMPLATE.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  RELEASING.md  deny.toml  release-plz.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: cargo-audit.yml  cargo-deny.yml  ci.yml  facade-publish-readiness.yml  publish-readiness.yml  release-plz-pr.yml  release-plz-release.yml
crates/use-wasi/: Cargo.toml  README.md
crates/use-wasi/src/: lib.rs
crates/use-wasm/: Cargo.toml
crates/use-wasm-binary/: Cargo.toml  README.md
crates/use-wasm-binary/src/: lib.rs
crates/use-wasm-component/: Cargo.toml  README.md
crates/use-wasm-component/src/: lib.rs
crates/use-wasm-export/: Cargo.toml  README.md
crates/use-wasm-export/src/: lib.rs
crates/use-wasm-feature/: Cargo.toml  README.md
crates/use-wasm-feature/src/: lib.rs
crates/use-wasm-function/: Cargo.toml  README.md
crates/use-wasm-function/src/: lib.rs
crates/use-wasm-import/: Cargo.toml  README.md
crates/use-wasm-import/src/: lib.rs
crates/use-wasm-memory/: Cargo.toml  README.md
crates/use-wasm-memory/src/: lib.rs
crates/use-wasm-module/: Cargo.toml  README.md
crates/use-wasm-module/src/: lib.rs
crates/use-wasm-section/: Cargo.toml  README.md
crates/use-wasm-section/src/: lib.rs
crates/use-wasm-target/: Cargo.toml  README.md
crates/use-wasm-target/src/: lib.rs
crates/use-wasm-text/: Cargo.toml  README.md
crates/use-wasm-text/src/: lib.rs
crates/use-wasm-value/: Cargo.toml  README.md
crates/use-wasm-value/src/: lib.rs
crates/use-wasm-wit/: Cargo.toml  README.md
crates/use-wasm-wit/src/: lib.rs
crates/use-wasm/examples/: basic_usage.rs
crates/use-wasm/src/: lib.rs
crates/use-wasm/tests/: facade.rs
docs/: README.md
scripts/: README.md
