[package]
name = "use-wasm-binary"
description = "WebAssembly binary magic-byte, version-byte, marker, and header validation primitives."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-wasm-binary"
keywords = ["wasm", "binary", "header", "primitive", "rustuse"]
categories = ["development-tools", "wasm", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
