[package]
name = "use-wasm-export"
description = "WebAssembly export name wrappers, export kind, and exported item metadata primitives."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-wasm-export"
keywords = ["wasm", "export", "metadata", "primitive", "rustuse"]
categories = ["development-tools", "wasm", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
