[package]
name = "use-wasm-function"
description = "WebAssembly function index, type index, local index, parameter list, result list, and signature metadata primitives."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-wasm-function"
keywords = ["wasm", "function", "signature", "primitive", "rustuse"]
categories = ["development-tools", "wasm", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-wasm-value = { workspace = true }

[lints]
workspace = true
