[package]
name = "use-wasm-module"
description = "Module-level WebAssembly name, metadata, import, export, and validation status primitives."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-wasm-module"
keywords = ["wasm", "module", "metadata", "primitive", "rustuse"]
categories = ["development-tools", "wasm", "data-structures"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
